# rollcall

./: .env.prod  .env.template  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .ruff.toml  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: django.yml  ruff.yml
certbot/: Dockerfile
event_manager/: Dockerfile  Dockerfile.prod  entrypoint.sh  games_data.jsonl  giantbomb_games.jsonl  import_games_from_rawg.py  import_games_from_steam.py  manage.py  requirements.txt
event_manager/categories/: apps.py  models.py  test_models.py
event_manager/categories/migrations/: 0001_initial.py  0002_alter_category_options.py
event_manager/event_manager/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
event_manager/events/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
event_manager/events/migrations/: 0001_initial.py  0002_alter_event_is_canceled_alter_event_is_private.py  0002_remove_eventparticipants_role_and_more.py  0003_alter_eventparticipants_status.py  0004_alter_event_game.py  0004_event_max_participants_alter_event_is_private.py  0005_alter_event_end.py  0005_alter_event_participants.py  0006_alter_event_max_participants.py  0007_eventparticipants_present.py  0008_category_event_category.py  0009_alter_event_category_delete_category.py  0010_alter_event_category.py  0010_eventparticipants_notified_alter_event_category_and_more.py  0011_alter_eventparticipants_event.py  0012_merge_20240419_1949.py  0013_alter_event_is_private.py  0013_alter_eventparticipants_options_alter_event_end_and_more.py  0014_alter_event_category_alter_event_description_and_more.py  0015_event_events_even_is_priv_d7766c_idx.py  0016_remove_event_events_even_is_priv_d7766c_idx_and_more.py  0017_event_game_alter_event_category.py  0018_event_uuid.py  0019_auto_20250826_1104.py  0020_auto_20250826_1104.py  0021_auto_20250826_1115.py  0022_remove_event_uuid_alter_event_id.py  0023_alter_event_id.py  0024_fix_event_participants_fk.py
event_manager/events/tests/: test_forms.py  test_models.py  test_views.py  tests.py
event_manager/fixtures/: data.json
event_manager/games/: models.py  test_models.py  urls.py  views.py
event_manager/games/migrations/: 0001_initial.py  0002_game_trgm_idx.py
event_manager/gamestat/: apps.py  models.py  urls.py  views.py
event_manager/gamestat/migrations/: 0001_initial.py  0003_remove_gamestat_favorite_game_and_more.py  (+2 more)
event_manager/homepage/: tests.py  urls.py  views.py
event_manager/notifications/: apps.py  tasks.py  urls.py  views.py
event_manager/profiles/: apps.py  urls.py  views.py
event_manager/templates/: 403.html  404.html  500.html  base.html  privacy.html
event_manager/tgbot/: bot.py
event_manager/users/: admin.py  forms.py  models.py  urls.py  views.py
nginx/: nginx.conf
requirements/: dev.txt  prod.txt
tgbot/: Dockerfile  bot.py  requirements.txt
(+41 files in other folders)
